# WasmChannel

./: .gitattributes  README.md  biome.json  build-wasm.js  build-wasm.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
app/: bootstrap.tsx  globals.css  layout.tsx  page.tsx
app/(chat)/: layout.tsx  page.tsx
app/(main)/: layout.tsx
app/components/: chat.tsx  providers.tsx
arch/: processing_message.txt
components/: BannerMessage.tsx  SiteUnavailableNotice.tsx  WhatInTheWorldIsThis.tsx  chat.tsx  providers.tsx
components/bench/: BenchmarkComparisonTable.tsx  BenchmarkConsole.tsx  BenchmarkControls.tsx  BenchmarkResults.tsx  useBenchmark.ts
components/chat/: ChatFooter.tsx  ChatHeader.tsx  ChatMessage.tsx  LoadingState.tsx  MessageInput.tsx  MessagesArea.tsx  OnlineUsersBar.tsx  ReactionDisplay.tsx  (+3 more)
constants/: chat.ts
crates/: README.md
hooks/: fingerprint.tsx  useAuth.ts  useChatMessage.ts  useChatReactions.ts  useChatSimulation.ts  useFingerprint.ts  useFingerprint.tsx  useInitWasm.ts  useSocket.ts  wasm.tsx
lib/: auth-client.ts  orpc.ts
oop/: chat.ts  index.ts  packet.ts
rust_wasm/: Cargo.toml
rust_wasm/src/: hash.rs  lib.rs  protocol.rs
rust_wasm/src/oop/: mod.rs  oop.rs  packet.rs
rust_wasm/src/utils/: mod.rs
store/: client.ts  room.ts  store.ts
types/: benchmark.ts  chat.ts  orpc.d.ts  worker.d.ts
utils/: chat.ts
worker/: .dev.vars.example  README.md  auth.ts  drizzle.config.ts  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc  wrangler.jsonc.example
(+71 files in other folders)
