[package]
name = "wasmchannel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
crc32fast = "1.4.2"
js-sys = "0.3.77"
bincode = "2.0.1"
lz4_flex = "0.11.3"
[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
